# Book-Service

./: .dockerignore  .env  .env.example  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: auth.py  auth_ui.py  config.py  database.py  db_models.py  initial_books.py  llm_recommendations.py  main.py  models.py  repository.py  streamlit_app.py  user_models.py  worker.py
docs/: EX3-notes.md
docs/runbooks/: compose.md
scripts/: demo.py  refresh.py
tests/: test_api.py  test_refresh.py
