[project]
name = "book-service"
version = "0.1.0"
description = "A book management API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "httpx>=0.25.0",
    "streamlit>=1.52.1",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
